<resources>
    <string name="app_name">GithubRepoFinder</string>
    <string name="search">Search</string>
    <string name="search_for_repos">Start Searching For Github Repositories</string>
    <string name="repoOwnerName">Created By: %s</string>
    <string name="repoDescription">Description:\n%s</string>
    <string name="repoLanguages">Languages: %s</string>
    <string name="fetching">Fetching...</string>
    <string name="repoNotFound">No Repo Found</string>
    <string name="filters">Filters</string>
    <string name="clear">Clear</string>
    <string name="sort_by">Sort By</string>
    <string name="stars">Stars</string>
    <string name="watchers_count">Watchers Count</string>
    <string name="last_updated">Last Updated</string>
    <string name="apply">Apply</string>
    <string name="order_by">Order By</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="score">Score</string>
    <string name="name">Name</string>
    <string name="created_at">Created At</string>
    <string name="search_field_not_empty">Search Field Should Not Be Empty</string>
    <string name="no_more_results">No More Results</string>
</resources>